--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
             <article id="hosts">
               <h2>Hosts</h2>
               <div class="logos">
-                <a href="http://www.smartlogicsolutions.com/"><img src="../img/smartlogic.png" class="smartlogic"></a>
+                <a href="http://smartlogic.io/"><img src="../img/smartlogic.png" class="smartlogic" alt="SmartLogic is a web and mobile product development company specializing in Ruby on Rails, Javascript, iOS and Android development."></a>
                 <a href="http://www.ubalt.edu/"><img src="../img/ub.jpg" class="ub"></a>
               </div>
               <div class="descriptions">
-                <p><a href="http://www.smartlogicsolutions.com/">SmartLogic</a> is a web and mobile application development firm based in Baltimore.</p>
+                <p><a href="http://smartlogic.io/">SmartLogic</a> is a web and mobile application development firm based in Baltimore.</p>
                 <p><a href="http://www.ubalt.edu/">University of Baltimore</a> is the public undergraduate, graduate and professional University located in the heart of Baltimore.</p> 
               </div>
             </article>
@@ -282,7 +282,7 @@
               <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg" alt="EventRebels"></a>
               <a href="http://www.omniti.com"><img src="../img/omni-TI.png" alt="OmniTI"></a>
               <a href="http://www.appdevelopersalliance.org/"><img src="../img/application-developers-alliance.png" alt="Application Developers Alliance"></a>
-              <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
+              <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogic.io">Yair</a>.</p>
             </article>
 
             <footer>
