--- a/previous-years.html
+++ b/previous-years.html
@@ -49,7 +49,7 @@
             <article id="bohconf-2010">
               <h2>BohConf 2010&mdash;Boh Monroe</h2>
               <p>BohConf started in 2010 as the "Conf of Pleasant Coding."  <a href="http://www.railsconf.com/">RailsConf</a>
-              came to Baltimore and <a href="http://www.smartlogicsolutions.com/">SmartLogic</a>
+              came to Baltimore and <a href="http://smartlogic.io/">SmartLogic</a>
               organized the official&mdash;and free&mdash;unconference. By all accounts BohConf
               was a success, with one attendee going so far as to call BohConf "The Best Ruby Conference Ever."</p>
               <div>
@@ -66,7 +66,7 @@
               <h2>BohConf 2011&mdash;Boh Fiction</h2>
               <p>Baltimore was such a gracious host to RailsConf and BohConf that the organizers of RailsConf made the obvious decision
               of bringing RailsConf back to Baltimore for another year.</p>
-              <p>Always ones to outdo ourselves we at <a href="http://www.smartlogicsolutions.com/">SmartLogic</a> brought BohConf
+              <p>Always ones to outdo ourselves we at <a href="http://smartlogic.io/">SmartLogic</a> brought BohConf
               back in style.  That included $800 of snacks from Sam's Club and various goodies graciously provided by our
               friends at <a href="http://nationalbohemian.com/">Natty Boh</a>, including several cases of Boh cans, a Boh cornhole set,
               and last but certainly not least a case of Boh 40's aka the <a href="http://twitpic.com/4yzwto">best
@@ -84,7 +84,7 @@
             <article id="bohconf-2012">
               <h2>BohConf 2012&mdash;CowBoh</h2>
               <p>RailsConf moved to Austin, TX in 2012, and BohConf went with it.  The local Austin Rails community
-              stepped up and organized BohConf.  We at <a href="http://www.smartlogicsolutions.com">SmartLogic</a>
+              stepped up and organized BohConf.  We at <a href="http://smartlogic.io/">SmartLogic</a>
               still designed and printed some cool BohConf t-shirts.</p>
               <div>
                 <img src="img/shirt-green-2012.png">
