There Will Be No Ignite. Remove mentions of "Ignite" in favor of "Opening Party"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <p>July 19</p>
               <p>Baltimore, MD</p>
               <a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a>
-              <p class="ignite">And join us for Ignite BohConf on July 18, 5pm!</p>
+              <p class="pre-party">And join us for the BohConf Opening party on July 18, 5pm!</p>
             </span>
             <span class="logo">
               <img src="/img/logo.png" alt="BohConf">
@@ -109,7 +109,7 @@
             <article id="schedule">
               <h2>Schedule</h2>
 
-              <p>Thursday 7/18/13 from 5pm - 8pm: Ignite / Opening Party</p>
+              <p>Thursday 7/18/13 from 5pm - 8pm: Opening Party</p>
               <p>Friday 7/19/13 from 9am - 5:30pm: BohConf</p>
 
               <p>The tentative BohConf schedule is as follows:</p>
