--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <span>You Are a Designer (Whether you know it or not)</span>
               </section>
               <section>
-                <img src="/img/speakers/ahacop.png">
+                <img src="/img/speakers/ahacop2.jpeg">
                 <strong>Ara Hacopian</strong>
                 <span>An Introduction to Reactive Cocoa</span>
               </section>
@@ -187,7 +187,7 @@
                 <span>What you need to know about Responsive Web Design (RWD)</span>
               </section>
               <section>
-                <img src="/img/speakers/johnbintz.png">
+                <img src="/img/speakers/johnbintz2.jpg">
                 <strong>John Bintz</strong>
                 <span>Total Beginner AngularJS: Blow Your Mind Edition</span>
               </section>
