add Barcamp info and link to Session Idea spreadsheet

--- a/index.html
+++ b/index.html
@@ -226,7 +226,6 @@
                 <strong>Zach Nichols</strong>
                 <span>Windows 8 – why you should care</span>
               </section>
-              <p>The detailed schedule will be published soon.</p>
 
               <h3>Guided Explorations</h3>
               <section>
@@ -260,7 +259,9 @@
                 <strong>Tom von Schwerdtner</strong>
                 <span>A Modern Objective-C Development Methodology</span>
               </section>
-              <p>The detailed schedule will be published soon.</p>
+
+              <h3>BarCamp</h3>
+              <p><a href="previous-years.html">Previous BohConfs</a> have been inspired by the <a href="http://barcamp.org/">BarCamp</a> and <a href="http://en.wikipedia.org/wiki/Unconference">Unconference</a> movement. In this spirit, the afternoon sessions will be attendee-driven. Submit your own session idea and see others <a href="http://goo.gl/nd6h5">here</a>.</p>
             </article>
 
             <article id="hosts">
