This talk now has a name

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <img src="/img/speakers/gtrakgt.jpg">
                 <img src="/img/speakers/canweriotnow.png">
                 <strong>Gary Trakhman & Jason Lewis</strong>
-                <span>Clojure for Everyone</span>
+                <span>'Getting' Clojure: Parentheses are just hugs for your code</span>
               </section>
               <section>
                 <img src="/img/speakers/ngauthier.jpeg">
