--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <span>Deploying Rails apps with Chef and Capistrano</span>
               </section>
               <section>
-                <img src="/img/speakers/gtrakgt.jpg">
+                <img src="/img/speakers/gtrakgt.png">
                 <img src="/img/speakers/canweriotnow.png">
                 <strong>Gary Trakhman & Jason Lewis</strong>
                 <span>'Getting' Clojure: Parentheses are just hugs for your code</span>
