the last couple headshots

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <span>CSS Preprocessors to the Rescue!</span>
               </section>
               <section>
-                <img src="/img/speakers/kanye_boh.png">
+                <img src="/img/speakers/sam.png">
                 <strong>Sam Goldman</strong>
                 <span>The Language of Abstraction</span>
               </section>
@@ -217,7 +217,7 @@
                 <span>Designing for a Global Context</span>
               </section>
               <section>
-                <img src="/img/speakers/kanye_boh.png">
+                <img src="/img/speakers/wcarroll.jpg">
                 <strong>Will Carroll</strong>
                 <span>Creating Online Maps</span>
               </section>
