added gb.tc to sponsor list

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
               <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg" alt="EventRebels"></a>
               <a href="http://www.omniti.com"><img src="../img/omni-TI.png" alt="OmniTI"></a>
               <a href="http://www.appdevelopersalliance.org/"><img src="../img/application-developers-alliance.png" alt="Application Developers Alliance"></a>
+              <a href="http://www.gb.tc/"><img src="../img/gbtc.png" alt="gb.tc"></a>
               <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogic.io">Yair</a>.</p>
             </article>
 
