Here is the actual schedule. With times and everything.

--- a/index.html
+++ b/index.html
@@ -109,159 +109,199 @@
             <article id="schedule">
               <h2>Schedule</h2>
 
-              <p>Thursday 7/18/13 from 5pm - 8pm: Opening Party</p>
-              <p>Friday 7/19/13 from 9am - 5:30pm: BohConf</p>
-
-              <p>The tentative BohConf schedule is as follows:</p>
-              
-              <table>
+              <table class="table table-bordered tabel-condensed">
                 <tr>
-                  <th>Room</th>
-                  <th>Capacity</th>
-                  <th>First half of day</th>
-                  <th>Second half of day</th>
+                  <th>Time</th>
+                  <th>Auditorium</th>
+                  <th>Room 135</th>
+                  <th>Room 143</th>
+                  <th>Atrium</th>
                 </tr>
                 <tr>
-                  <td>Auditorium</td>
-                  <td>160</td>
-                  <td colspan="2">20-Minute Lectures</td>
+                  <td>8:15</td>
+                  <td colspan="4">Registration</td>
                 </tr>
                 <tr>
-                  <td>135</td>
-                  <td>40-50</td>
-                  <td>Guided Exploration</td>
-                  <td>Barcamp</td>
+                  <td>9:00</td>
+                  <td>Opening Remarks</td>
+                  <td></td>
+                  <td></td>
+                  <td>Registration</td>
                 </tr>
                 <tr>
-                  <td>143</td>
-                  <td>40-50</td>
-                  <td>Guided Exploration</td>
-                  <td>Barcamp</td>
+                  <td>9:10</td>
+                  <td>
+                    <img src="/img/speakers/andymangold.jpeg">
+                    <strong>Andy Mangold</strong>
+                    <span>You Are a Designer (Whether you know it or not)</span>
+                  </td>
+                  <td rowspan="2">
+                    <img src="/img/speakers/bryanl.jpeg">
+                    <strong>Bryan Liles</strong>
+                    <span>The next steps of Android development</span>
+                  </td>
+                  <td rowspan="2">
+                    <img src="/img/speakers/tvon.jpg">
+                    <strong>Tom von Schwerdtner</strong>
+                    <span>A Modern Objective-C Development Methodology</span>
+                  </td>
+                  <td rowspan="8">Hacking / Office Hours</td>
                 </tr>
                 <tr>
-                  <td>Atrium</td>
-                  <td>100</td>
-                  <td colspan="2">Hacking / Office Hours</td>
+                  <td>9:35</td>
+                  <td>
+                    <img src="/img/speakers/bsierakowski.png">
+                    <strong>Brian Sierakowski</strong>
+                    <span>From Slacker To Hacker: Practical tips to learning to code</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>10:00</td>
+                  <td>
+                    <img src="/img/speakers/fontzter.jpg">
+                    <strong>Dave Fontz</strong>
+                    <span>.on(".theBubble") - Event Binding at a Higher Level</span>
+                  </td>
+                  <td rowspan="3">
+                    <img src="/img/speakers/ngauthier.jpeg">
+                    <strong>Nick Gauthier</strong>
+                    <span>Let's Code Us Some Backbone.js</span>
+                  </td>
+                  <td rowspan="3">
+                    <img src="/img/speakers/cupakromer.jpeg">
+                    <strong>Aaron Kromer</strong>
+                    <span>Dream Code (Reverse Refactoring)</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>10:25</td>
+                  <td>
+                    <img src="/img/speakers/oronhaus.jpg">
+                    <strong>Gill Haus</strong>
+                    <span>So, You Want to Join a Startup?</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>10:50</td>
+                  <td>
+                    <img src="/img/speakers/javierios.jpeg">
+                    <strong>Javier Rios</strong>
+                    <span>What you need to know about Responsive Web Design (RWD)</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>11:15</td>
+                  <td>
+                    <img src="/img/speakers/johnbintz2.jpg">
+                    <strong>John Bintz</strong>
+                    <span>Total Beginner AngularJS: Blow Your Mind Edition</span>
+                  </td>
+                  <td rowspan="3">
+                    <img src="/img/speakers/gtrakgt.png">
+                    <img src="/img/speakers/canweriotnow.png">
+                    <strong>Gary Trakhman & Jason Lewis</strong>
+                    <span>'Getting' Clojure: Parentheses are just hugs for your code</span>
+                  </td>
+                  <td rowspan="3">
+                    <img src="/img/speakers/danivovich.jpg">
+                    <strong>Dan Ivovich</strong>
+                    <span>Deploying Rails apps with Chef and Capistrano</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>11:40</td>
+                  <td>
+                    <img src="/img/speakers/ignu.jpeg">
+                    <strong>Len Smith</strong>
+                    <span>Backbone's rarely enough: An introduction to Backbone Marionette</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>12:05</td>
+                  <td>
+                    <img src="/img/speakers/ryandestefano.jpg">
+                    <strong>Ryan DeStefano</strong>
+                    <span>CSS Preprocessors to the Rescue!</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>12:30</td>
+                  <td colspan="4">LUNCH</td>
+                </tr>
+                <tr>
+                  <td>2:00</td>
+                  <td>
+                    <img src="/img/speakers/sam.png">
+                    <strong>Sam Goldman</strong>
+                    <span>The Language of Abstraction</span>
+                  </td>
+                  <td colspan="2" rowspan="9">
+                    BARCAMP
+                    <p><a href="previous-years.html">Previous BohConfs</a> have been inspired by the <a href="http://barcamp.org/">BarCamp</a> and <a href="http://en.wikipedia.org/wiki/Unconference">Unconference</a> movement. In this spirit, the afternoon sessions will be attendee-driven. Submit your own session idea and see others <a href="http://goo.gl/nd6h5">here</a>, or on the whiteboard on the Atrium.</p>
+                  </td>
+                  <td rowspan="9">Hacking / Office Hours</td>
+                </tr>
+                <tr>
+                  <td>2:25</td>
+                  <td>
+                    <img src="/img/speakers/una.png">
+                    <strong>Una Kravets</strong>
+                    <span>Designing for a Global Context</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2:50</td>
+                  <td>
+                    <img src="/img/speakers/wcarroll.jpg">
+                    <strong>Will Carroll</strong>
+                    <span>Creating Online Maps</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3:15</td>
+                  <td>
+                    <img src="/img/speakers/subelsky.png">
+                    <strong>Mike Subelsky</strong>
+                    <span>A web product playbook: technology and business strategies</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3:40</td>
+                  <td>
+                    <img src="/img/speakers/sznichols.png">
+                    <strong>Zach Nichols</strong>
+                    <span>Windows 8 – why you should care</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>4:05</td>
+                  <td>
+                    <img src="/img/speakers/ahacop2.jpeg">
+                    <strong>Ara Hacopian</strong>
+                    <span>An Introduction to Reactive Cocoa</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>4:30</td>
+                  <td>
+                    <img src="/img/speakers/flipsasser.jpeg">
+                    <strong>Flip Sasser</strong>
+                    <span>Code Economics: investing in quality software and the irrational producer</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>4:55</td>
+                  <td>
+                    <img src="/img/speakers/ericoestrich.png">
+                    <strong>Eric Oestrich</strong>
+                    <span>Testing Android</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>5:20</td>
+                  <td>Closing Remarks</td>
                 </tr>
               </table>
-
-              <h3>Speakers</h3>
-              <section>
-                <img src="/img/speakers/andymangold.jpeg">
-                <strong>Andy Mangold</strong>
-                <span>You Are a Designer (Whether you know it or not)</span>
-              </section>
-              <section>
-                <img src="/img/speakers/ahacop2.jpeg">
-                <strong>Ara Hacopian</strong>
-                <span>An Introduction to Reactive Cocoa</span>
-              </section>
-              <section>
-                <img src="/img/speakers/bsierakowski.png">
-                <strong>Brian Sierakowski</strong>
-                <span>From Slacker To Hacker: Practical tips to learning to code</span>
-              </section>
-              <section>
-                <img src="/img/speakers/fontzter.jpg">
-                <strong>Dave Fontz</strong>
-                <span>.on(".theBubble") - Event Binding at a Higher Level</span>
-              </section>
-              <section>
-                <img src="/img/speakers/ericoestrich.png">
-                <strong>Eric Oestrich</strong>
-                <span>Testing Android</span>
-              </section>
-              <section>
-                <img src="/img/speakers/flipsasser.jpeg">
-                <strong>Flip Sasser</strong>
-                <span>Code Economics: investing in quality software and the irrational producer</span>
-              </section>
-              <section>
-                <img src="/img/speakers/oronhaus.jpg">
-                <strong>Gill Haus</strong>
-                <span>So, You Want to Join a Startup?</span>
-              </section>
-              <section>
-                <img src="/img/speakers/javierios.jpeg">
-                <strong>Javier Rios</strong>
-                <span>What you need to know about Responsive Web Design (RWD)</span>
-              </section>
-              <section>
-                <img src="/img/speakers/johnbintz2.jpg">
-                <strong>John Bintz</strong>
-                <span>Total Beginner AngularJS: Blow Your Mind Edition</span>
-              </section>
-              <section>
-                <img src="/img/speakers/ignu.jpeg">
-                <strong>Len Smith</strong>
-                <span>Backbone's rarely enough: An introduction to Backbone Marionette</span>
-              </section>
-              <section>
-                <img src="/img/speakers/subelsky.png">
-                <strong>Mike Subelsky</strong>
-                <span>A web product playbook: technology and business strategies</span>
-              </section>
-              <section>
-                <img src="/img/speakers/ryandestefano.jpg">
-                <strong>Ryan DeStefano</strong>
-                <span>CSS Preprocessors to the Rescue!</span>
-              </section>
-              <section>
-                <img src="/img/speakers/sam.png">
-                <strong>Sam Goldman</strong>
-                <span>The Language of Abstraction</span>
-              </section>
-              <section>
-                <img src="/img/speakers/una.png">
-                <strong>Una Kravets</strong>
-                <span>Designing for a Global Context</span>
-              </section>
-              <section>
-                <img src="/img/speakers/wcarroll.jpg">
-                <strong>Will Carroll</strong>
-                <span>Creating Online Maps</span>
-              </section>
-              <section>
-                <img src="/img/speakers/sznichols.png">
-                <strong>Zach Nichols</strong>
-                <span>Windows 8 – why you should care</span>
-              </section>
-
-              <h3>Guided Explorations</h3>
-              <section>
-                <img src="/img/speakers/cupakromer.jpeg">
-                <strong>Aaron Kromer</strong>
-                <span>Dream Code (Reverse Refactoring)</span>
-              </section>
-              <section>
-                <img src="/img/speakers/bryanl.jpeg">
-                <strong>Bryan Liles</strong>
-                <span>The next steps of Android development</span>
-              </section>
-              <section>
-                <img src="/img/speakers/danivovich.jpg">
-                <strong>Dan Ivovich</strong>
-                <span>Deploying Rails apps with Chef and Capistrano</span>
-              </section>
-              <section>
-                <img src="/img/speakers/gtrakgt.png">
-                <img src="/img/speakers/canweriotnow.png">
-                <strong>Gary Trakhman & Jason Lewis</strong>
-                <span>'Getting' Clojure: Parentheses are just hugs for your code</span>
-              </section>
-              <section>
-                <img src="/img/speakers/ngauthier.jpeg">
-                <strong>Nick Gauthier</strong>
-                <span>Let's Code Us Some Backbone.js</span>
-              </section>
-              <section>
-                <img src="/img/speakers/tvon.jpg">
-                <strong>Tom von Schwerdtner</strong>
-                <span>A Modern Objective-C Development Methodology</span>
-              </section>
-
-              <h3>BarCamp</h3>
-              <p><a href="previous-years.html">Previous BohConfs</a> have been inspired by the <a href="http://barcamp.org/">BarCamp</a> and <a href="http://en.wikipedia.org/wiki/Unconference">Unconference</a> movement. In this spirit, the afternoon sessions will be attendee-driven. Submit your own session idea and see others <a href="http://goo.gl/nd6h5">here</a>.</p>
             </article>
 
             <article id="hosts">
