add The Foundery as the pre-party location

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
               <h1>BohConf 2013</h1>
               <p>July 19</p>
               <p>Baltimore, MD</p>
-              <a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a>
-              <p class="pre-party">And join us for the BohConf Opening party on July 18, 5pm!</p>
+              <a href="http://bohconf2013.eventbrite.com/" class="ticket-link">Buy Tickets!</a>
+              <p class="pre-party">And join us for the BohConf Opening party on July 18, 6pm at <a href="http://bmorefoundery.com/">The Foundery</a>!</p>
             </span>
             <span class="logo">
               <img src="/img/logo.png" alt="BohConf">
